--- a/api/pom.xml
+++ b/api/pom.xml
@@ -77,6 +77,12 @@
       		<scope>test</scope>
     	</dependency>
     	
+    	   <dependency>
+		      <groupId>org.springdoc</groupId>
+		      <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+		      <version>2.2.0</version>
+		   </dependency>
+    	
     	<dependency>
 		  <groupId>com.auth0</groupId>
 		  <artifactId>java-jwt</artifactId>
